--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 .header {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.908);
     padding: 20px;
     font-size: 1.2rem;
 }
@@ -25,6 +25,9 @@
 .header__link {
     text-decoration: none;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
     padding: 15px 30px;
 }
 
@@ -71,8 +74,85 @@
     padding: 10px;
     margin-top: auto;
     font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
+/* Media query for iPhone XR */
+@media only screen and (max-width: 414px) {
+    .header {
+      padding: 10px;
+      font-size: 1rem;
+    }
+  
+    .header__nav {
+      justify-content: center;
+      margin: 0;
+    }
+  
+    .header__link {
+      padding: 10px 20px;
+    }
+  
+    .main {
+      margin: 20px;
+    }
+  
+    .article__h1 {
+      font-size: 1.1rem;
+    }
+  
+    .article__p {
+      font-size: 1rem;
+      margin-bottom: 30px;
+    }
+  
+    .button {
+      padding: 8px 20px;
+      font-size: 0.8rem;
+    }
+  
+    .footer {
+      padding: 5px;
+    }
+  }
+  
+  /* Media query for iPad */
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .header {
+      padding: 15px;
+      font-size: 1.1rem;
+    }
+  
+    .header__nav {
+      justify-content: flex-end;
+      margin: 0;
+    }
+  
+    .header__link {
+      padding: 12px 25px;
+    }
+  
+    .main {
+      margin: 50px 15%;
+    }
+  
+    .article__h1 {
+      font-size: 1.2rem;
+    }
+  
+    .article__p {
+      font-size: 1.1rem;
+      margin-bottom: 40px;
+    }
+  
+    .button {
+      padding: 10px 24px;
+      font-size: 0.9rem;
+    }
+  
+    .footer {
+      padding: 10px;
+    }
+  }
 
 /* copied the below straight from an old project for mobile responsiveness, and it needs to be tweeked to work with our site but I can't relearn all of this tonight haha to be revisited but we've got the structure at least
 @media (min-width: 800px) {
