--- a/style.css
+++ b/style.css
@@ -33,14 +33,18 @@
 
 .header__link:hover {
     text-decoration: underline;
+    color: yellow;
 }
 
 .main {
     display: flex;
+    font-family: Arial, Helvetica, sans-serif;
     flex-direction: column;
     align-items: center;
     padding-top: 10px;
     padding-bottom: 100px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin: 50px 25em;
     background-color: white;
     border-radius: 7px;
@@ -58,14 +62,19 @@
 }
 
 .button {
+    font-family: Arial, Helvetica, sans-serif;
     padding: 10px 24px;
     border-radius: 12px;
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     border: 2px solid black;
     font-size: 0.9rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.button:hover {
+    color: yellow;
+}
+
 
 .footer {
     background-color:black;
