--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     min-height: 100vh;
     margin: 0;
-    background-image: url("background_img.jpg");
+    background-image: url("background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
