--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
     margin: 0;
-    background-image: url("background.jpg");
+    background-image: url("Images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -15,7 +15,7 @@
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
   margin: 0;
-  background-image: url("dogs.jpg");
+  background-image: url("Images/dogs.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -27,7 +27,7 @@
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
   margin: 0;
-  background-image: url("cat.jpg");
+  background-image: url("Images/cat.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -39,7 +39,7 @@
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
   margin: 0;
-  background-image: url("animal.jpg");
+  background-image: url("Images/animal.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
